# png2dae

./: CMakeLists.txt  README.md
build-png2dae-Desktop-Debug/: Makefile  png2dae
materials/: Links to sources
materials/LIRS_reports/report1/: Аббясов.Отчет.№1_(3.04.2018).docx  Аббясов.Отчет.№1_(3.04.2018).odt
materials/LIRS_reports/report2/: Аббясов.Отчет.№2_(10.04.2018).docx
materials/LIRS_reports/report3/: Аббясов.Отчет.№3_(17.04.2018).docx
src/: MeshLoader.cpp  MeshLoader.h  heightmap.cpp  heightmap.h  libtrix.h  main.cpp  png2dae.cpp  png2dae.h  png2dae.pro  png2stl.cpp  png2stl.h  stb_image.h  stl2dae.cpp  stl2dae.h  types.h  utils.cpp  utils.h
